--- a/css/lk.css
+++ b/css/lk.css
@@ -231,6 +231,7 @@ body {
 .slider-lk {
 	padding: 20px;
 	padding-left: 260px;
+	min-height: 202px;
 	margin: 16px -10px 20px;
 }
 .slide-show__item {
@@ -320,8 +321,6 @@ body {
 	opacity: 1;
 }
 .slider-lk__item--main::before {
-	opacity: 1 !important;
-	background: none !important;
 	border: 4px solid #03a9f5;
 }
 .slider-lk__item--main .ico--check-blue {
@@ -333,7 +332,11 @@ body {
 .alert_up__lk {
 	width: 460px;
 	padding: 38px;
+	padding-bottom: 25px;
 	text-align: left;
+}
+.alert_up__lk .alert_up__btns .btn {
+	margin: 10px 8px 0;
 }
 .alert_up__lk p {
 	color: #656565;
@@ -628,4 +631,15 @@ body {
 	left: 0;
 	line-height: 30px;
 	content: '+';
+}
+
+
+.alert_up__error-box {
+	position: relative;
+	margin: 8px 0 0;
+}
+.alert_up__error-inner {
+	padding: 10px 10px;
+	border-radius: 5px;
+	background: #f2dede
 }
